--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "ClipWrite",
-  "version": "1.0",
-  "description": "Simulate.",
+  "version": "1.2",
+  "description": "ClipWrite",
   "permissions": [
     "contextMenus",
     "scripting",
@@ -12,7 +12,6 @@
   "background": {
     "service_worker": "background.js"
   },
-  "host_permissions": ["<all_urls>"],
   "commands": {
     "activate-writer": {
       "suggested_key": {
