--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,14 @@
   "name": "ClipWrite",
   "version": "1.2",
   "description": "ClipWrite",
+
+  "icons": {
+    "128": "icon.png"
+  },
+  "action": {
+    "default_icon": "icon.png"
+  },
+    
   "permissions": [
     "contextMenus",
     "scripting",
@@ -21,3 +29,4 @@
     }
   }
 }
+
